BCC__BCC36B__P3__Jorge_1511424/implementacao/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declaracoes
Rule 2     lista_declaracoes -> lista_declaracoes declaracao
Rule 3     lista_declaracoes -> declaracao
Rule 4     declaracao -> declaracao_variaveis
Rule 5     declaracao -> inicializacao_variaveis
Rule 6     declaracao -> declaracao_funcao
Rule 7     declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis
Rule 8     inicializacao_variaveis -> atribuicao
Rule 9     lista_variaveis -> lista_variaveis VIRGULA var
Rule 10    lista_variaveis -> var
Rule 11    var -> ID
Rule 12    var -> ID indice
Rule 13    indice -> indice ABRE_COL expressao FECHA_COL
Rule 14    indice -> ABRE_COL expressao FECHA_COL
Rule 15    tipo -> INTEIRO
Rule 16    tipo -> FLUTUANTE
Rule 17    declaracao_funcao -> tipo cabecalho
Rule 18    declaracao_funcao -> cabecalho
Rule 19    cabecalho -> ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM
Rule 20    lista_parametros -> lista_parametros VIRGULA parametro
Rule 21    lista_parametros -> parametro
Rule 22    lista_parametros -> vazio
Rule 23    parametro -> tipo DOIS_PONTOS ID
Rule 24    parametro -> parametro ABRE_COL FECHA_COL
Rule 25    corpo -> corpo acao
Rule 26    corpo -> vazio
Rule 27    acao -> expressao
Rule 28    acao -> declaracao_variaveis
Rule 29    acao -> se
Rule 30    acao -> repita
Rule 31    acao -> leia
Rule 32    acao -> escreva
Rule 33    acao -> retorna
Rule 34    acao -> error
Rule 35    se -> SE expressao ENTAO corpo FIM
Rule 36    se -> SE expressao ENTAO corpo SENAO corpo FIM
Rule 37    repita -> REPITA corpo ATE expressao
Rule 38    atribuicao -> var ATRIBUICAO expressao
Rule 39    leia -> LEIA ABRE_PAR var FECHA_PAR
Rule 40    escreva -> ESCREVA ABRE_PAR expressao FECHA_PAR
Rule 41    retorna -> RETORNA ABRE_PAR expressao FECHA_PAR
Rule 42    expressao -> expressao_logica
Rule 43    expressao -> atribuicao
Rule 44    expressao_logica -> expressao_simples
Rule 45    expressao_logica -> expressao_logica operador_logico expressao_simples
Rule 46    expressao_simples -> expressao_aditiva
Rule 47    expressao_simples -> expressao_simples operador_relacional expressao_aditiva
Rule 48    expressao_aditiva -> expressao_multiplicativa
Rule 49    expressao_aditiva -> expressao_aditiva operador_soma expressao_multiplicativa
Rule 50    expressao_multiplicativa -> expressao_unaria
Rule 51    expressao_multiplicativa -> expressao_multiplicativa operador_multiplicacao expressao_unaria
Rule 52    expressao_unaria -> fator
Rule 53    expressao_unaria -> operador_soma fator
Rule 54    expressao_unaria -> operador_negacao fator
Rule 55    operador_relacional -> MENOR
Rule 56    operador_relacional -> MAIOR
Rule 57    operador_relacional -> IGUALDADE
Rule 58    operador_relacional -> DESIGUALDADE
Rule 59    operador_relacional -> MENOR_IGUAL
Rule 60    operador_relacional -> MAIOR_IGUAL
Rule 61    operador_soma -> SOMA
Rule 62    operador_soma -> SUBTRACAO
Rule 63    operador_logico -> E_LOGICO
Rule 64    operador_logico -> OU_LOGICO
Rule 65    operador_negacao -> NEGACAO
Rule 66    operador_multiplicacao -> MULTIPLICACAO
Rule 67    operador_multiplicacao -> DIVISAO
Rule 68    fator -> ABRE_PAR expressao FECHA_PAR
Rule 69    fator -> var
Rule 70    fator -> chamada_funcao
Rule 71    fator -> numero
Rule 72    numero -> NUM_INTEIRO
Rule 73    numero -> NUM_PONTO_FLUTUANTE
Rule 74    numero -> NUM_NOTACAO_CIENTIFICA
Rule 75    chamada_funcao -> ID ABRE_PAR lista_argumentos FECHA_PAR
Rule 76    lista_argumentos -> lista_argumentos VIRGULA expressao
Rule 77    lista_argumentos -> expressao
Rule 78    lista_argumentos -> vazio
Rule 79    comentario -> COMENTARIO
Rule 80    vazio -> <empty>

Terminals, with rules where they appear

ABRE_COL             : 13 14 24
ABRE_PAR             : 19 39 40 41 68 75
ATE                  : 37
ATRIBUICAO           : 38
COMENTARIO           : 79
DESIGUALDADE         : 58
DIVISAO              : 67
DOIS_PONTOS          : 7 23
ENTAO                : 35 36
ESCREVA              : 40
E_LOGICO             : 63
FECHA_COL            : 13 14 24
FECHA_PAR            : 19 39 40 41 68 75
FIM                  : 19 35 36
FLUTUANTE            : 16
ID                   : 11 12 19 23 75
IGUALDADE            : 57
INTEIRO              : 15
LEIA                 : 39
MAIOR                : 56
MAIOR_IGUAL          : 60
MENOR                : 55
MENOR_IGUAL          : 59
MULTIPLICACAO        : 66
NEGACAO              : 65
NUM_INTEIRO          : 72
NUM_NOTACAO_CIENTIFICA : 74
NUM_PONTO_FLUTUANTE  : 73
OU_LOGICO            : 64
REPITA               : 37
RETORNA              : 41
SE                   : 35 36
SENAO                : 36
SOMA                 : 61
SUBTRACAO            : 62
VIRGULA              : 9 20 76
error                : 34

Nonterminals, with rules where they appear

acao                 : 25
atribuicao           : 8 43
cabecalho            : 17 18
chamada_funcao       : 70
comentario           : 
corpo                : 19 25 35 36 36 37
declaracao           : 2 3
declaracao_funcao    : 6
declaracao_variaveis : 4 28
escreva              : 32
expressao            : 13 14 27 35 36 37 38 40 41 68 76 77
expressao_aditiva    : 46 47 49
expressao_logica     : 42 45
expressao_multiplicativa : 48 49 51
expressao_simples    : 44 45 47
expressao_unaria     : 50 51
fator                : 52 53 54
indice               : 12 13
inicializacao_variaveis : 5
leia                 : 31
lista_argumentos     : 75 76
lista_declaracoes    : 1 2
lista_parametros     : 19 20
lista_variaveis      : 7 9
numero               : 71
operador_logico      : 45
operador_multiplicacao : 51
operador_negacao     : 54
operador_relacional  : 47
operador_soma        : 49 53
parametro            : 20 21 24
programa             : 0
repita               : 30
retorna              : 33
se                   : 29
tipo                 : 7 17 23
var                  : 9 10 38 39 69
vazio                : 22 26 78

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declaracoes
    (2) lista_declaracoes -> . lista_declaracoes declaracao
    (3) lista_declaracoes -> . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (18) declaracao_funcao -> . cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (38) atribuicao -> . var ATRIBUICAO expressao
    (19) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (11) var -> . ID
    (12) var -> . ID indice

    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11
    ID              shift and go to state 13

    programa                       shift and go to state 1
    lista_declaracoes              shift and go to state 2
    declaracao                     shift and go to state 3
    declaracao_variaveis           shift and go to state 4
    inicializacao_variaveis        shift and go to state 5
    declaracao_funcao              shift and go to state 6
    tipo                           shift and go to state 7
    atribuicao                     shift and go to state 8
    cabecalho                      shift and go to state 9
    var                            shift and go to state 12

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_declaracoes .
    (2) lista_declaracoes -> lista_declaracoes . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (18) declaracao_funcao -> . cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (38) atribuicao -> . var ATRIBUICAO expressao
    (19) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (11) var -> . ID
    (12) var -> . ID indice

    $end            reduce using rule 1 (programa -> lista_declaracoes .)
    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11
    ID              shift and go to state 13

    declaracao                     shift and go to state 14
    declaracao_variaveis           shift and go to state 4
    inicializacao_variaveis        shift and go to state 5
    declaracao_funcao              shift and go to state 6
    tipo                           shift and go to state 7
    atribuicao                     shift and go to state 8
    cabecalho                      shift and go to state 9
    var                            shift and go to state 12

state 3

    (3) lista_declaracoes -> declaracao .

    INTEIRO         reduce using rule 3 (lista_declaracoes -> declaracao .)
    FLUTUANTE       reduce using rule 3 (lista_declaracoes -> declaracao .)
    ID              reduce using rule 3 (lista_declaracoes -> declaracao .)
    $end            reduce using rule 3 (lista_declaracoes -> declaracao .)


state 4

    (4) declaracao -> declaracao_variaveis .

    INTEIRO         reduce using rule 4 (declaracao -> declaracao_variaveis .)
    FLUTUANTE       reduce using rule 4 (declaracao -> declaracao_variaveis .)
    ID              reduce using rule 4 (declaracao -> declaracao_variaveis .)
    $end            reduce using rule 4 (declaracao -> declaracao_variaveis .)


state 5

    (5) declaracao -> inicializacao_variaveis .

    INTEIRO         reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    FLUTUANTE       reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    ID              reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    $end            reduce using rule 5 (declaracao -> inicializacao_variaveis .)


state 6

    (6) declaracao -> declaracao_funcao .

    INTEIRO         reduce using rule 6 (declaracao -> declaracao_funcao .)
    FLUTUANTE       reduce using rule 6 (declaracao -> declaracao_funcao .)
    ID              reduce using rule 6 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 6 (declaracao -> declaracao_funcao .)


state 7

    (7) declaracao_variaveis -> tipo . DOIS_PONTOS lista_variaveis
    (17) declaracao_funcao -> tipo . cabecalho
    (19) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM

    DOIS_PONTOS     shift and go to state 15
    ID              shift and go to state 17

    cabecalho                      shift and go to state 16

state 8

    (8) inicializacao_variaveis -> atribuicao .

    INTEIRO         reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    FLUTUANTE       reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    ID              reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    $end            reduce using rule 8 (inicializacao_variaveis -> atribuicao .)


state 9

    (18) declaracao_funcao -> cabecalho .

    INTEIRO         reduce using rule 18 (declaracao_funcao -> cabecalho .)
    FLUTUANTE       reduce using rule 18 (declaracao_funcao -> cabecalho .)
    ID              reduce using rule 18 (declaracao_funcao -> cabecalho .)
    $end            reduce using rule 18 (declaracao_funcao -> cabecalho .)


state 10

    (15) tipo -> INTEIRO .

    DOIS_PONTOS     reduce using rule 15 (tipo -> INTEIRO .)
    ID              reduce using rule 15 (tipo -> INTEIRO .)


state 11

    (16) tipo -> FLUTUANTE .

    DOIS_PONTOS     reduce using rule 16 (tipo -> FLUTUANTE .)
    ID              reduce using rule 16 (tipo -> FLUTUANTE .)


state 12

    (38) atribuicao -> var . ATRIBUICAO expressao

    ATRIBUICAO      shift and go to state 18


state 13

    (19) cabecalho -> ID . ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (11) var -> ID .
    (12) var -> ID . indice
    (13) indice -> . indice ABRE_COL expressao FECHA_COL
    (14) indice -> . ABRE_COL expressao FECHA_COL

    ABRE_PAR        shift and go to state 19
    ATRIBUICAO      reduce using rule 11 (var -> ID .)
    ABRE_COL        shift and go to state 21

    indice                         shift and go to state 20

state 14

    (2) lista_declaracoes -> lista_declaracoes declaracao .

    INTEIRO         reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    FLUTUANTE       reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    ID              reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    $end            reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)


state 15

    (7) declaracao_variaveis -> tipo DOIS_PONTOS . lista_variaveis
    (9) lista_variaveis -> . lista_variaveis VIRGULA var
    (10) lista_variaveis -> . var
    (11) var -> . ID
    (12) var -> . ID indice

    ID              shift and go to state 24

    lista_variaveis                shift and go to state 22
    var                            shift and go to state 23

state 16

    (17) declaracao_funcao -> tipo cabecalho .

    INTEIRO         reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    FLUTUANTE       reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    ID              reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    $end            reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)


state 17

    (19) cabecalho -> ID . ABRE_PAR lista_parametros FECHA_PAR corpo FIM

    ABRE_PAR        shift and go to state 19


state 18

    (38) atribuicao -> var ATRIBUICAO . expressao
    (42) expressao -> . expressao_logica
    (43) expressao -> . atribuicao
    (44) expressao_logica -> . expressao_simples
    (45) expressao_logica -> . expressao_logica operador_logico expressao_simples
    (38) atribuicao -> . var ATRIBUICAO expressao
    (46) expressao_simples -> . expressao_aditiva
    (47) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (11) var -> . ID
    (12) var -> . ID indice
    (48) expressao_aditiva -> . expressao_multiplicativa
    (49) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (50) expressao_multiplicativa -> . expressao_unaria
    (51) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (52) expressao_unaria -> . fator
    (53) expressao_unaria -> . operador_soma fator
    (54) expressao_unaria -> . operador_negacao fator
    (68) fator -> . ABRE_PAR expressao FECHA_PAR
    (69) fator -> . var
    (70) fator -> . chamada_funcao
    (71) fator -> . numero
    (61) operador_soma -> . SOMA
    (62) operador_soma -> . SUBTRACAO
    (65) operador_negacao -> . NEGACAO
    (75) chamada_funcao -> . ID ABRE_PAR lista_argumentos FECHA_PAR
    (72) numero -> . NUM_INTEIRO
    (73) numero -> . NUM_PONTO_FLUTUANTE
    (74) numero -> . NUM_NOTACAO_CIENTIFICA

    ID              shift and go to state 31
    ABRE_PAR        shift and go to state 37
    SOMA            shift and go to state 40
    SUBTRACAO       shift and go to state 41
    NEGACAO         shift and go to state 42
    NUM_INTEIRO     shift and go to state 43
    NUM_PONTO_FLUTUANTE shift and go to state 44
    NUM_NOTACAO_CIENTIFICA shift and go to state 45

    var                            shift and go to state 25
    expressao                      shift and go to state 26
    expressao_logica               shift and go to state 27
    atribuicao                     shift and go to state 28
    expressao_simples              shift and go to state 29
    expressao_aditiva              shift and go to state 30
    expressao_multiplicativa       shift and go to state 32
    operador_soma                  shift and go to state 33
    expressao_unaria               shift and go to state 34
    fator                          shift and go to state 35
    operador_negacao               shift and go to state 36
    chamada_funcao                 shift and go to state 38
    numero                         shift and go to state 39

state 19

    (19) cabecalho -> ID ABRE_PAR . lista_parametros FECHA_PAR corpo FIM
    (20) lista_parametros -> . lista_parametros VIRGULA parametro
    (21) lista_parametros -> . parametro
    (22) lista_parametros -> . vazio
    (23) parametro -> . tipo DOIS_PONTOS ID
    (24) parametro -> . parametro ABRE_COL FECHA_COL
    (80) vazio -> .
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE

    FECHA_PAR       reduce using rule 80 (vazio -> .)
    VIRGULA         reduce using rule 80 (vazio -> .)
    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11

    lista_parametros               shift and go to state 46
    parametro                      shift and go to state 47
    vazio                          shift and go to state 48
    tipo                           shift and go to state 49

state 20

    (12) var -> ID indice .
    (13) indice -> indice . ABRE_COL expressao FECHA_COL

    ATRIBUICAO      reduce using rule 12 (var -> ID indice .)
    VIRGULA         reduce using rule 12 (var -> ID indice .)
    INTEIRO         reduce using rule 12 (var -> ID indice .)
    FLUTUANTE       reduce using rule 12 (var -> ID indice .)
    ID              reduce using rule 12 (var -> ID indice .)
    $end            reduce using rule 12 (var -> ID indice .)
    FIM             reduce using rule 12 (var -> ID indice .)
    error           reduce using rule 12 (var -> ID indice .)
    SE              reduce using rule 12 (var -> ID indice .)
    REPITA          reduce using rule 12 (var -> ID indice .)
    LEIA            reduce using rule 12 (var -> ID indice .)
    ESCREVA         reduce using rule 12 (var -> ID indice .)
    RETORNA         reduce using rule 12 (var -> ID indice .)
    ABRE_PAR        reduce using rule 12 (var -> ID indice .)
    SOMA            reduce using rule 12 (var -> ID indice .)
    SUBTRACAO       reduce using rule 12 (var -> ID indice .)
    NEGACAO         reduce using rule 12 (var -> ID indice .)
    NUM_INTEIRO     reduce using rule 12 (var -> ID indice .)
    NUM_PONTO_FLUTUANTE reduce using rule 12 (var -> ID indice .)
    NUM_NOTACAO_CIENTIFICA reduce using rule 12 (var -> ID indice .)
    ATE             reduce using rule 12 (var -> ID indice .)
    SENAO           reduce using rule 12 (var -> ID indice .)
    MULTIPLICACAO   reduce using rule 12 (var -> ID indice .)
    DIVISAO         reduce using rule 12 (var -> ID indice .)
    MENOR           reduce using rule 12 (var -> ID indice .)
    MAIOR           reduce using rule 12 (var -> ID indice .)
    IGUALDADE       reduce using rule 12 (var -> ID indice .)
    DESIGUALDADE    reduce using rule 12 (var -> ID indice .)
    MENOR_IGUAL     reduce using rule 12 (var -> ID indice .)
    MAIOR_IGUAL     reduce using rule 12 (var -> ID indice .)
    E_LOGICO        reduce using rule 12 (var -> ID indice .)
    OU_LOGICO       reduce using rule 12 (var -> ID indice .)
    FECHA_COL       reduce using rule 12 (var -> ID indice .)
    FECHA_PAR       reduce using rule 12 (var -> ID indice .)
    ENTAO           reduce using rule 12 (var -> ID indice .)
    ABRE_COL        shift and go to state 50


state 21

    (14) indice -> ABRE_COL . expressao FECHA_COL
    (42) expressao -> . expressao_logica
    (43) expressao -> . atribuicao
    (44) expressao_logica -> . expressao_simples
    (45) expressao_logica -> . expressao_logica operador_logico expressao_simples
    (38) atribuicao -> . var ATRIBUICAO expressao
    (46) expressao_simples -> . expressao_aditiva
    (47) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (11) var -> . ID
    (12) var -> . ID indice
    (48) expressao_aditiva -> . expressao_multiplicativa
    (49) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (50) expressao_multiplicativa -> . expressao_unaria
    (51) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (52) expressao_unaria -> . fator
    (53) expressao_unaria -> . operador_soma fator
    (54) expressao_unaria -> . operador_negacao fator
    (68) fator -> . ABRE_PAR expressao FECHA_PAR
    (69) fator -> . var
    (70) fator -> . chamada_funcao
    (71) fator -> . numero
    (61) operador_soma -> . SOMA
    (62) operador_soma -> . SUBTRACAO
    (65) operador_negacao -> . NEGACAO
    (75) chamada_funcao -> . ID ABRE_PAR lista_argumentos FECHA_PAR
    (72) numero -> . NUM_INTEIRO
    (73) numero -> . NUM_PONTO_FLUTUANTE
    (74) numero -> . NUM_NOTACAO_CIENTIFICA

    ID              shift and go to state 31
    ABRE_PAR        shift and go to state 37
    SOMA            shift and go to state 40
    SUBTRACAO       shift and go to state 41
    NEGACAO         shift and go to state 42
    NUM_INTEIRO     shift and go to state 43
    NUM_PONTO_FLUTUANTE shift and go to state 44
    NUM_NOTACAO_CIENTIFICA shift and go to state 45

    expressao                      shift and go to state 51
    expressao_logica               shift and go to state 27
    atribuicao                     shift and go to state 28
    expressao_simples              shift and go to state 29
    var                            shift and go to state 25
    expressao_aditiva              shift and go to state 30
    expressao_multiplicativa       shift and go to state 32
    operador_soma                  shift and go to state 33
    expressao_unaria               shift and go to state 34
    fator                          shift and go to state 35
    operador_negacao               shift and go to state 36
    chamada_funcao                 shift and go to state 38
    numero                         shift and go to state 39

state 22

    (7) declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .
    (9) lista_variaveis -> lista_variaveis . VIRGULA var

    INTEIRO         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    FLUTUANTE       reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ID              reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    $end            reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    FIM             reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    error           reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    SE              reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    REPITA          reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    LEIA            reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ESCREVA         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    RETORNA         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ABRE_PAR        reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
